# Camera_traversability

./: .gitignore  README.md
campus_delivery_auth/: CMakeLists.txt  dynamic_passability_detector_node.py  package.xml  setup.py
campus_delivery_auth/launch/: vision_auth.launch
campus_delivery_auth/models/: README.md
campus_delivery_auth/scripts/: cargo_actuator_node.py  vision_auth_node.py
campus_delivery_auth/src/campus_delivery_auth/: __init__.py  camera_sync.py  gesture_recognizer.py  hand_recognizer.py  qr_scanner.py  serial_driver.py
campus_delivery_auth/test/: test_hand_recognizer_mediapipe.py  test_hand_recognizer_offline.py  test_serial_driver_offline.py
campus_delivery_auth/tools/: hand_demo.py
traversability_ws/src/camera_passability/: CMakeLists.txt  package.xml  setup.py
traversability_ws/src/camera_passability/launch/: rosbag_test.launch  traversability_live.launch
traversability_ws/src/camera_passability/scripts/: Traversability_traversability_node.py  camera_passability_node.py  local_path_node.py  measure_node.py  visualizer_node.py
traversability_ws/src/camera_passability/src/camera_passability/: Traversability_costmap_publisher.py  Traversability_sre_mapper.py  camera_sync.py  config.py  depth_projector.py  local_path_planner.py  passability_judger.py  yolo_detector.py
